# CPPTaiko

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_msys2_debug.sh  build_msys2_release.sh  build_release.sh  build_windows_debug.bat  build_windows_release.bat  lsan.supp  meson.build
.github/workflows/: build.yml
scripts/: install_deps_mingw64.sh
src/: CPPTaiko.cpp  YataiDON.cpp
src/libs/: animation.cpp  animation.h  audio.cpp  audio.h  audio_engine.h  config.cpp  config.h  global_data.h  script.cpp  script.h  texture.cpp  texture.h  utils.cpp
src/libs/audio/: audio.cpp
src/libs/parsers/: tja.cpp  tja.h
src/objects/: player.cpp  player.h
src/objects/game/: background.h  balloon_counter.cpp  balloon_counter.h  combo_announce.h  gauge.cpp  gauge.h  gauge_hit_effect.cpp  gauge_hit_effect.h  note_arc.cpp  note_arc.h  player.cpp  player.h
src/scenes/: game.cpp  game.h
